# rusty_ddns

./: .gitignore  AGENTS.md  Cargo.toml  README.md  default.nix  flake.nix
examples/: rusty_ddns-cloudflare.service  rusty_ddns-cloudflare.timer
src/: cloudflare.rs  ip.rs  lib.rs  main.rs  update.rs
