[package]
name = "rusty_ddns"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.54", features = ["derive"] }
clap-verbosity-flag = "3.0.4"
env_logger = "0.11.8"
log = "0.4.29"
reqwest = { version = "0.13.1", features = ["json", "blocking", "query"] }
serde = { version = "1.0.228", features = ["derive"] }
